feat:implement ccd high level data setup for definition import (CMC-a578) (#159)